# sudoku-solver

./: CMakeLists.txt  README.md
includes/: Sudoku.h
includes/Solvers/: AbstractSolver.h  BasicFishSolver.h  HiddenTupleSolver.h  LockedCandidatesSolver.h  NakedSingleSolver.h
includes/Solvers/Utility/: MathUtils.h  SetBitIterator.h  SudokuDescriptor.h
src/: Sudoku.cpp
tests/: CMakeLists.txt  MathUtilsTest.cpp  SetBitIteratorTest.cpp  StaticRegularSudokuDescriptorTest.cpp  StaticRegularSudokuSolverTest.cpp  StaticRegularSudokuTest.cpp
tests/googletest/: CMakeLists.txt
